GEN-24300 Open source plugins - When built/tested in our build, they should be being built against their ivy dependencies, not the build's (current) version of the publicapi
- Replace build.xml with a more standard/modern one