@@ -1,37 +1,151 @@
-<project xmlns:ivy="antlib:org.apache.ivy.ant" name="SpeciesDelimitation" default="build-gplugin">
+<project xmlns:ivy="antlib:org.apache.ivy.ant" name="Species Delimitation" default="create-plugin" basedir=".">
 
-	<!--
-	Author: Bruce Ashton
-	Date: 2007-11-28
-	Copyright (C): Biomatters Ltd
+	<property name="version-regex-pattern" value=".*PLUGIN_VERSION\s+=\s+&quot;(\d+\.\d+\.\d+)&quot;;.*"/>
 
-	A template build file for Geneious plugins. A plugin (when installed) may
-	consist of a single jar file or a directory containing a number of jar
-	files and other resources. In the former case, the name of the jar file
-	must be the fully qualified name of the plugin class with a ".jar" suffix.
-	In the latter case the name of the directory must be the fully qualified
-	name of the plugin class.
-	-->
+	<loadfile property="plugin.version" srcfile="src/speciesDelimitation/SpeciesDelimitationPlugin.java">
+		<filterchain>
+			<linecontainsregexp>
+				<regexp pattern="${version-regex-pattern}"/>
+			</linecontainsregexp>
+			<replaceregex pattern="${version-regex-pattern}" replace="\1"/>
+			<replacestring from="." to="_"/>
+			<striplinebreaks/>
+		</filterchain>
+	</loadfile>
 
-	<!-- The following property should be set to the installation directory of
-	your copy of Geneious -->
-	<!-- <property name="geneious.dir" location="C:/Program Files/Geneious"/> --><!--(Windows) -->
-	<property name="geneious.dir" location="/Applications/Geneious.app/Contents/Resources/app"/>  <!-- (Mac) -->
-	<!--<property name="geneious.dir" location="/home/bruce/Geneious"/>   --><!-- (Linux) -->
+	<property file="plugin.properties"/>
 
-    <!--The plugin.properties file contains some important information required by Geneious-->
-    <property file="plugin.properties"/>
-    <property name="classes" location="bin"/>
+	<property name="build" location="build"/>
+	<property name="classes" location="classes"/>
+	<property name="lib" location="lib"/>
+	<property name="resources" location="resources"/>
 	<property name="src" location="src"/>
+	<property name="test.src" location="test"/>
+	<property name="test.classes" location="testclasses"/>
+	<property name="test-data" location="testdata"/>
+	<property name="report" location="report"/>
+	<property name="GeneiousFiles" location="GeneiousFiles"/>
+	<condition property="test.exists">
+		<available file="test" type="dir"/>
+	</condition>
 
-	<!--
-	These three jars are the libraries that must be on the classpath when
-	developing any Geneious plugin. You will need to reference these in	the
-	project settings for your IDE also.
-	-->
 	<path id="classpath">
-		<fileset dir="lib"/>
+		<fileset dir="${lib}"/>
 	</path>
+
+	<!-- hook to enable the geneious build to build this plugin -->
+	<target name="geneious-build">
+		<!-- The "target-to-run" property should be set in the subant call to this target. -->
+		<ant antfile="../../build-opensource-plugins.xml" target="${target-to-run}">
+			<reference refid="geneious.classpath.test"/>
+			<reference refid="geneious.classpath"/>
+		</ant>
+	</target>
+
+	<target name= "create-plugin" depends="build-plugin">
+		<zip zipfile="${build}/${short-plugin-name}.gplugin">
+			<fileset dir="${build}">
+				<include name="${plugin-name}/**/*"/>
+			</fileset>
+		</zip>
+		<copy file="${build}/${short-plugin-name}.gplugin" todir="${build}/../../downloads"/>
+	</target>
+
+	<target name="build-plugin" depends="clean,compile-plugin">
+		<jar jarfile="${build}/${plugin-name}.jar">
+			<fileset dir="${classes}"/>
+		</jar>
+		<mkdir dir="${build}/${plugin-name}"/>
+		<copy todir="${build}/${plugin-name}">
+			<fileset dir="${build}">
+				<include name="${plugin-name}.jar"/>
+			</fileset>
+			<fileset dir="lib">
+				<include name="*.jar"/>
+				<!-- Exclude Javadoc and sources from build -->
+				<exclude name="*-sources.jar"/>
+				<exclude name="*-javadoc.jar"/>
+				<!-- Exclude the Geneious Public API libraries because they are available at runtime -->
+				<exclude name="GeneiousPublicAPI*.jar"/>
+				<exclude name="jdom*.jar"/>
+				<exclude name="jebl*.jar"/>
+				<!--Exclude test libs, not needed at runtime-->
+				<exclude name="junit*.jar"/>
+				<exclude name="hamcrest*.jar"/>
+			</fileset>
+		</copy>
+
+	</target>
+
+	<target name="compile-plugin" depends="prepare,retrieve-build-dependencies">
+		<javac target="1.6" source="1.6" destdir="${classes}" debug="true">
+			<classpath refid="classpath"/>
+			<src path="${src}"/>
+		</javac>
+	</target>
+
+	<target name="prepare">
+		<mkdir dir="${build}"/>
+		<mkdir dir="${classes}"/>
+		<mkdir dir="${test.classes}"/>
+		<mkdir dir="${report}"/>
+		<mkdir dir="${lib}"/>
+	</target>
+
+	<target name="clean">
+		<delete dir="${lib}"/>
+		<delete dir="${build}"/>
+		<delete dir="${classes}"/>
+		<delete dir="${test.classes}"/>
+		<delete dir="${report}"/>
+		<delete dir="${GeneiousFiles}"/>
+		<delete file="GeneiousFiles.zip"/>
+	</target>
+
+
+	<target name="compile-tests" depends="compile-plugin" if="test.exists">
+		<javac target="1.6" source="1.6" destdir="${test.classes}" debug="true">
+			<classpath>
+				<path refid="classpath"/>
+				<pathelement location="${classes}"/>
+			</classpath>
+			<src path="${test.src}"/>
+		</javac>
+	</target>
+
+
+	<target name="test" depends="compile-tests, retrieve-test-runtime-dependencies" if="test.exists">
+
+		<junit dir="GeneiousFiles" fork="true" maxmemory="1024M" printsummary="on" timeout="180000">
+			<batchtest todir="${report}">
+				<fileset dir="${test.classes}">
+					<include name="**/*Test.class"/>
+				</fileset>
+			</batchtest>
+			<classpath>
+				<path refid="classpath"/>
+				<file file="${GeneiousFiles}/iSeek.jar"/>
+				<fileset dir="${GeneiousFiles}/lib"/>
+				<pathelement location="${classes}"/>
+				<pathelement location="${resources}"/>
+				<pathelement location="${test.classes}"/>
+				<pathelement location="${GeneiousFiles}/resources"/>
+				<pathelement location="${GeneiousFiles}/bundledPlugins"/>
+			</classpath>
+			<env key="DISPLAY" value=":0.0"/>
+			<env key="DYLD_LIBRARY_PATH" value="/Library/Application Support/Geneious/Frameworks"/>
+			<formatter type="xml"/>
+			<jvmarg value="-Xms256M"/>
+			<jvmarg value="-ea"/>
+			<jvmarg value="-XX:MaxNewSize=40M"/>
+			<jvmarg value="-XX:MaxPermSize=256M"/>
+			<jvmarg value="-XX:ReservedCodeCacheSize=128m"/>
+			<jvmarg value="-Xss512K"/>
+			<sysproperty key="report.dir" value="${report}"/>
+			<sysproperty key="user.dir" value="${build}"/>
+		</junit>
+	</target>
+
 
 	<!-- setup reference to the Ivy Ant tasks library -->
 	<path id="ivy.lib.path">
@@ -48,67 +162,16 @@
 		<ivy:retrieve conf="build" settingsref="biocode.ivy.config" pattern="lib/[artifact]-[type]-[revision].[ext]"/>
 	</target>
 
-	<!-- hook to enable the geneious build to build this plugin -->
-	<target name="geneious-build">
-		<!-- The "target-to-run" property should be set in the subant call to this target. -->
-		<ant antfile="../../build-opensource-plugins.xml" target="${target-to-run}">
-			<reference refid="geneious.classpath.test"/>
-			<reference refid="geneious.classpath"/>
-		</ant>
+	<condition property="GeneiousFiles.exists">
+		<available file="${GeneiousFiles}" type="dir"/>
+	</condition>
+	<target name="retrieve-test-runtime-dependencies" description="Retrieve the Geneious runtime for running the tests" unless="GeneiousFiles.exists" if="test.exists">
+		<ivy:retrieve conf="test" type="resource" settingsref="biocode.ivy.config" pattern="${basedir}/[artifact].[ext]"/>
+		<unzip src="GeneiousFiles.zip" dest="."/>
 	</target>
 
-	<target name="all" depends="clean, build-gplugin, install"/>
-
-	<!--
-	This target will work only if you have the permissions to write to the
-	plugins directory of your Geneious installation.
-	-->
-	<target name="install" depends="build-jar">
-		<copy file="${plugin-name}.jar" todir="${geneious.dir}/plugins/"/>
+	<target name="clean-ivy-cache">
+		<ivy:cleancache settingsRef="biocode.ivy.config"/>
 	</target>
 
-	<!--
-	This target builds a gplugin file. This file can be	installed in Geneious
-	by dragging and dropping the file on a running Geneious application on
-	most operating systems.
-	-->
-	<target name="build-gplugin" depends="build-jar">
-        <delete dir="dist"/>
-        <mkdir dir="dist/${plugin-name}"/>
-        <copy file="${plugin-name}.jar" tofile="dist/${plugin-name}/${short-plugin-name}.jar"/>
-        <zip zipfile="${short-plugin-name}.gplugin">
-            <fileset dir="dist"/>
-        </zip>
-	</target>
-
-	<!--
-		This target builds the jar file. Installation can be as simple as copying
-		the jar file to plugins directory of your Geneious installation.
-	-->
-	
-	<target name="build-jar" depends="compile">
-		<jar destfile="${plugin-name}.jar">
-			<fileset dir="${classes}"/>
-            <fileset dir=".">
-                <include name="plugin.properties"/>
-            </fileset>
-		</jar>
-	</target>
-
-	<target name="compile"  depends="prepare, retrieve-build-dependencies">
-        <javac destdir="${classes}" debug="true" target="1.5">
-        		<classpath refid="classpath"/>
-        		<src path="${src}"/>
-        </javac>
-	</target>
-
-	<target name="prepare">
-		<mkdir dir="${classes}"/>
-	</target>
-
-	<target name="clean">
-		<delete dir="${classes}"/>
-		<delete file="${plugin-name}.gplugin"/>
-		<delete file="${plugin-name}.jar"/>
-	</target>
 </project>
